--- a/package.json
+++ b/package.json
@@ -13,10 +13,23 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
     "babel-loader": "8.0.6",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "3.2.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack": "4.41.1",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
+    "react-dom": "^16.10.2",
+    "styled-components": "^4.4.0"
   }
 }
