--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,18 @@
     "html-webpack-plugin": "3.2.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
-    "webpack": "4.41.1",
-    "webpack-cli": "3.3.9",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "lodash.clonedeep": "^4.5.0",
     "react": "^16.10.2",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.10.2",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.0"
   }
 }
