--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-redis": "^1.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "redis": "^2.8.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
